# BTDAPI

./: .gitignore  CMakeLists.txt  README.md
BTD5API/: CMakeLists.txt
BTD5API/include/BTD5API/: Global.hpp  api.hpp  base.hpp  bloons.hpp
BTD5API/src/: Dummy.cpp  Global.cpp  api.hpp  base.cpp  base.hpp  bloons.cpp  bloons.hpp
BTD6API/: CMakeLists.txt
BTD6API/src/: Dummy.cpp
BTDBAPI/: CMakeLists.txt
BTDCL/: CMakeLists.txt
BTDCL/src/: main.cpp
BTDGUI/: CMakeLists.txt
Common/: CMakeLists.txt
Common/doc/: QNA.txt
Common/include/Common/Core/: core.hpp  log.hpp  log.hpp.in  pch.hpp  platform.hpp  stdn.hpp
Common/include/Common/Memory/: LoadMemory.hpp  MappedPtrVec.hpp  MappedStruct.hpp  MappedVector.hpp  MemoryUtils.hpp  Pe.hpp  Types.hpp  memory.hpp
Common/include/Common/Memory/Common/: MemUtils.hpp  memory.hpp
Common/include/Common/Memory/X86/: LoadMemory.hpp
Common/include/Common/Steam/: steamUtils.hpp
Common/src/: CMakeLists.txt
Common/src/Memory/: CMakeLists.txt  LoadMemory.cpp  MemoryUtils.cpp  Pe.cpp
Common/src/Memory/Common/: CMakeLists.txt  LoadMemory.cpp
Common/src/Memory/X64/: CMakeLists.txt
Common/src/Memory/X86/: CMakeLists.txt
Common/src/Steam/: steamUtils.cpp
MemoryUtils/: CMakeLists.txt
MemoryUtils/MemCommon/: CMakeLists.txt
MemoryUtils/MemCommon/include/MemCommon/: LoadMemory.hpp
MemoryUtils/MemCommon/src/: LoadMemory.cpp
MemoryUtils/X64/: CMakeLists.txt
MemoryUtils/X86/: CMakeLists.txt
MemoryUtils/X86/include/MEMX86/: LoadMemory.hpp
MemoryUtils/X86/src/: Dummy.cpp
